Make header color match oig insignia, more spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ header#nav .nav-wrapper {
 }
 
 header#nav {
-  background: rgba(25, 40, 56, 1);
+  background: #183648;
   color: #fff;
 }
 
@@ -245,7 +245,7 @@ header#nav nav button#menu-icon {
 
 .main-content {
   max-width: 980px;
-  margin: 0 auto;
+  margin: 1em auto;
   text-align: center;
 }
 
@@ -259,6 +259,10 @@ header#nav nav button#menu-icon {
 
 .main-content a:hover {
   color: #FA7B21;
+}
+
+.about > p, .about > h1 {
+  text-align: left;
 }
 
 .vote table {
@@ -510,6 +514,7 @@ footer {
   background: #ebebeb;
   padding: 20px 0;
   border-top: 1px solid #333;
+  margin-top: 1em;
 }
 
 footer .footer-inner {
